--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -11,39 +11,9 @@ env:
 
 jobs:
   build:
-    name: "Build Image: ${{ matrix.platform }}"
+    name: Build Image
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        include:
-          - target: x86_64-unknown-linux-musl
-            platform: linux/amd64
-          - target: armv7-unknown-linux-musleabihf
-            platform: linux/arm/v7
-          - target: aarch64-unknown-linux-musl
-            platform: linux/arm64/v8
     steps:
-      - uses: actions/checkout@v2
-
-      - name: Cargo cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo
-            ./target
-          key: ${{ runner.os }}-cargo-${{ matrix.target }}-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-${{ matrix.target }}-
-
-      - uses: actions-rs/toolchain@v1
-        with:
-          toolchain: stable
-      - uses: actions-rs/cargo@v1
-        with:
-          use-cross: true
-          command: build
-          args: --release --target=${{ matrix.target }}
-
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v1
       - name: Login to DockerHub
@@ -51,39 +21,33 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: |
+            ${{ runner.os }}-buildx-
+      - name: Compute build variables
+        id: vars
+        run: |
+          printf '::set-output name=short-sha::%s' "${GITHUB_SHA:0:7}"
       - name: Build and Push
         id: docker_build
         uses: docker/build-push-action@v2
         with:
           pull: true
           push: true
-          context: target/${{ matrix.target }}/release
-          file: Dockerfile.ci
-          platforms: ${{ matrix.platform }}
+          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
           tags: |
-            ${{ env.image }}:${{ matrix.target }}
-
-  manifest:
-    name: Build Manifest
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Create manifest
-        env:
-          IMAGE: ${{ env.image }}
+            ${{ env.image }}:${{ steps.vars.outputs.short-sha }}
+            ${{ env.image }}:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
+      - name: Move Cache
         run: |
-          for manifest in latest "${GITHUB_SHA:0:7}"; do
-            docker manifest create "$IMAGE:$manifest" \
-             "$IMAGE:x86_64-unknown-linux-musl" \
-             "$IMAGE:armv7-unknown-linux-musleabihf" \
-             "$IMAGE:aarch64-unknown-linux-musl"
-            docker manifest push "$IMAGE:$manifest"
-          done
+          rm -rf /tmp/.buildx-cache
+          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
 
   readme:
     name: Update DockerHub Description
