--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -16,6 +16,12 @@ jobs:
     steps:
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v1
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
@@ -40,6 +46,8 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
           tags: |
+            ghcr.io/${{ env.image }}:${{ steps.vars.outputs.short-sha }}
+            ghcr.io/${{ env.image }}:latest
             ${{ env.image }}:${{ steps.vars.outputs.short-sha }}
             ${{ env.image }}:latest
           cache-from: type=local,src=/tmp/.buildx-cache
