--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ futures = "0.3"
 log = "0.4"
 env_logger = "0.9"
 nanoid = "0.4.0"
+once_cell = "1.8.0"
 
 [dependencies.async-std]
 version = "1.9"
