:whale: Update docker-compose image to ghcr

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2.4'
 services:
   app:
     build: .
-    image: gabe565/ascii-telnet-rust
+    image: ghcr.io/gabe565/ascii-telnet-rust
     ports:
       - "23:23"
     restart: on-failure
