--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ log = "0.4"
 env_logger = "0.9"
 nanoid = "0.4.0"
 once_cell = "1.8.0"
+signal-hook = "0.3.14"
 
 [dependencies.async-std]
 version = "1.9"
