--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ log = "0.4"
 env_logger = "0.9"
 once_cell = "1.8.0"
 signal-hook = "0.3.14"
+anyhow = "1.0.58"
 
 [dependencies.async-std]
 version = "1.9"
