:zap: Use native GitHub Actions build cache

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -27,13 +27,6 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      - name: Cache Docker layers
-        uses: actions/cache@v3
-        with:
-          path: /tmp/.buildx-cache
-          key: ${{ runner.os }}-buildx-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-buildx-
       - name: Compute build variables
         id: vars
         run: |
@@ -50,12 +43,8 @@ jobs:
             ghcr.io/${{ env.image }}:latest
             ${{ env.image }}:${{ steps.vars.outputs.short-sha }}
             ${{ env.image }}:latest
-          cache-from: type=local,src=/tmp/.buildx-cache
-          cache-to: type=local,mode=max,dest=/tmp/.buildx-cache-new
-      - name: Move Cache
-        run: |
-          rm -rf /tmp/.buildx-cache
-          mv /tmp/.buildx-cache-new /tmp/.buildx-cache
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
 
   readme:
     name: Update DockerHub Description
