--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -4,7 +4,7 @@ on:
   schedule:
     - cron: "0 7 * * 1"
   push:
-    branches: master
+    branches: main
 
 env:
   image: gabe565/ascii-telnet-rust
