--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -14,6 +14,8 @@ jobs:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v2
       - name: Login to GitHub Container Registry
