--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -39,7 +39,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           pull: true
-          push: true
+          push: ${{ github.secret_source == 'Actions' }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
           tags: |
             ghcr.io/${{ env.image }}:${{ steps.vars.outputs.short-sha }}
