--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -3,14 +3,24 @@ name: Docker Build
 on:
   push: {}
 
-env:
-  image: gabe565/ascii-telnet-rust
-
 jobs:
   build:
     name: Build Image
     runs-on: ubuntu-latest
     steps:
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: |
+            ghcr.io/gabe565/ascii-telnet-rust
+          tags: |
+            type=raw,priority=1000,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
+            type=semver,pattern={{version}}
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=ref,event=branch
+            type=sha
       - name: Set Swap Space
         uses: pierotofy/set-swap-space@v1.0
         with:
@@ -30,10 +40,6 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Compute build variables
-        id: vars
-        run: |
-          printf '::set-output name=short-sha::%s' "${GITHUB_SHA:0:7}"
       - name: Build and Push
         id: docker_build
         uses: docker/build-push-action@v3
@@ -41,8 +47,7 @@ jobs:
           pull: true
           push: ${{ github.secret_source == 'Actions' }}
           platforms: linux/amd64,linux/arm/v7,linux/arm64/v8
-          tags: |
-            ghcr.io/${{ env.image }}:${{ steps.vars.outputs.short-sha }}
-            ghcr.io/${{ env.image }}:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
