--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,27 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "config:base"
-  ],
-  "ignorePresets": [":prHourlyLimit2"],
-  "labels": [
-    "dependencies",
-    "{{datasource}}",
-    "{{updateType}}"
-  ],
-  "commitMessagePrefix": ":arrow_up:",
-  "packageRules": [
-    {
-      "matchUpdateTypes": ["lockFileMaintenance", "pin"],
-      "commitMessagePrefix": ":pushpin:"
-    },
-    {
-      "matchUpdateTypes": ["rollback"],
-      "commitMessagePrefix": ":arrow_down:"
-    },
-    {
-      "matchManagers": ["github-actions"],
-      "automerge": true
-    }
+    "github>gabe565/renovate-config"
   ]
 }
